--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,28 +1,16 @@
 <div class="container">
 
     <div class="jumbotron">
-        <h1>Order Your Burger </h1>
-        <p>Burger Orders for Pickup.</p>
+        <h1>Eat-Da-Burger!</h1>
         <br>
-        <h2>Select a Burger or Sandwich</h2>
+        <h2>Place Your Order</h2>
         <panel>
             <form class="create-form">
                 <div class="form-group">
-                    <label for="newburger">Order Fresh Burger</label>
                     <input type="text" id="newburger" name="burger">
-                    {{!-- <select data-placeholder="" id="newburger" name="burger"> --}}
-                        {{!-- <option value="Nothing Selected" selected>Please Select a Sandwich</option>
-                        <option value="Hamburger">Hamburger</option>
-                        <option value="CheeseBurger">CheeseBurger</option>
-                        <option value="DoubleBfChz">Double Up (double meat and cheese)</option>
-                        <option value="VeggieBurger">Veggie Burger</option>
-                        <option value="PulledPork">Pulled Pork Sandwich</option>
-                        <option value="ChichenClub">Chicken Club Sandwich</option>
-                        <option value="SteaknChz">Steak and Cheese Sandwich</option>
-                    </select> --}}
 
                     <button type="submit" class="btn btn-success" id="addburger">
-                        <span class="fa fa-thumbs-up"></span>
+                        <strong>Submit</strong>
                     </button>
                 </div>
             </form>
@@ -32,17 +20,15 @@
         <div class="col-sm-6">
             <div class="panel panel-default">
                 <div class="panel-heading" id="leftside"><strong>Your Burgers</strong>
-                    {{!-- <p>Send order to cashier when ready for pick up</p> --}}
                 </div>
                 <div class="panel-body">
 
                     <ul>
                         {{#each burgers}}
                         {{#unless devoured}}
-
                         <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
                         <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id="{{this.id}}"
-                            data-newDevoured="{{devour}}"><span class="fa fa-usd"></span></button>
+                            data-newDevoured="{{devour}}"><strong>Devour it!</strong></button>
                         <hr>
                         {{/unless}}
                         {{/each}}
@@ -53,24 +39,19 @@
         </div>
         <div class="col-sm-6">
             <div class="panel panel-default">
-                <div class="panel-heading" id="rightside"><strong>Burgers you have eaten:</strong>
+                <div class="panel-heading" id="rightside"><strong>Burgers You Have Eaten:</strong>
                 </div>
                 <div class="panel-body">
                     <ul>
                         {{#each burgers}}
                         {{#if devoured}}
                         <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
-                        {{!-- <button type="button" class="delete-burger btn btn-danger" id="trashbutton" data-id="{{this.id}}"
-                            data-newDevoured="{{devour}}"><span class="fa fa-trash"></span></button> --}}
                         <hr>
                         {{/if}}
                         {{/each}}
                     </ul>
                 </div>
-
             </div>
         </div>
-
     </div>
-    <!--endrow -->
 </div>
