--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url("../img/burgerpic2.png");
+  background-image: url("../img/doughnut-burger.png");
   background-repeat: no-repeat;
   background-position: right;
   background-color: black;
