more comments, minor style adjustment

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -14,11 +14,11 @@
   background-color: green;
   color: white;
   text-align: center;
-  font-size: 1.3em;
+  font-size: 25px;
 }
 #rightside {
   background-color: orange;
   color: white;
   text-align: center;
-  font-size: 1.3em;
+  font-size: 25px;
 }
